# MinGLE-tutorial

./: .gitignore  README.md
MinGLE/MinGLE-build/: CMakeCache.txt  Makefile  MinGLE  cmake_install.cmake  detector.tg  gui.mac  run.mac
MinGLE/MinGLE-source/: CMakeLists.txt  MinGLE.cc
